--- a/app/src/main/res/layout/activity_ingreso.xml
+++ b/app/src/main/res/layout/activity_ingreso.xml
@@ -42,15 +42,16 @@
             android:background="@drawable/round_corner"
             android:layout_margin="@dimen/abc_button_padding_horizontal_material" />
 
-        <ImageButton
+        <com.facebook.login.widget.LoginButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageButtonLoginFB"
-            android:src="@drawable/but_login"
-            android:background="#FF9999"
-            android:layout_margin="@dimen/abc_button_padding_horizontal_material"/>
+           />
 
-
+<!--
+android:layout_margin="@dimen/abc_button_padding_horizontal_material"
+android:src="@drawable/but_login"
+            android:background="#FF9999"-->
     </LinearLayout>
 
     <TextSwitcher
