--- a/app/src/main/res/layout/activity_crear_perfil_mascota.xml
+++ b/app/src/main/res/layout/activity_crear_perfil_mascota.xml
@@ -1,36 +1,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".CrearCuentaActivity"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:weightSum="1">
+    android:weightSum="1"
+    tools:context=".CrearCuentaActivity">
 
 
     <com.pkmmte.view.CircularImageView
+        android:id="@+id/circularImageMascota"
         android:layout_width="200px"
         android:layout_height="200px"
         android:src="@drawable/prueba"
-        android:id="@+id/circularImageMascota"
         app:border="true"
         app:border_color="#EEEEEE"
         app:border_width="4dp"
-        app:shadow="true"
-        />
+        app:shadow="true" />
 
     <TextView
+        android:id="@+id/textViewSubeFotoMascota"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_gravity="center_horizontal"
         android:text="Sube su foto"
-        android:id="@+id/textViewSubeFotoMascota"
-        android:layout_gravity="center_horizontal" />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TableLayout
         android:layout_width="match_parent"
@@ -41,17 +40,17 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_column="0"
                 android:text="Nombre: "
-                android:id="@+id/textView2"
-                android:layout_column="0" />
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <EditText
+                android:id="@+id/editMascota"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/editMascota"
                 android:layout_column="1"
                 android:layout_weight="1" />
 
@@ -62,25 +61,21 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Edad:"
-                android:id="@+id/textView5"
                 android:layout_column="0"
-                 />
+                android:text="Edad:"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <EditText
+                android:id="@+id/editEdadMascota"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/editEdadMascota"
+                android:inputType="number"
                 android:layout_column="1"
-                android:layout_weight="1"
-                />
+                android:layout_weight="1" />
         </TableRow>
-
-
-
 
 
         <TableRow
@@ -88,32 +83,31 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_column="0"
                 android:text="Raza: "
-                android:id="@+id/textView7"
-                android:layout_column="0" />
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/spinnerRaza"
-                    android:layout_column="1"
-                    android:entries="@array/raza_array"
-                   />
+            <Spinner
+                android:id="@+id/spinnerRaza"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:entries="@array/raza_array" />
         </TableRow>
     </TableLayout>
 
     <ImageButton
+        android:id="@+id/imageButtonCrearCuentaMascota"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButtonCrearCuentaMascota"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/crear_perfil_mascota"
         android:layout_margin="@dimen/abc_button_padding_horizontal_material"
         android:background="@drawable/round_corner"
-        android:backgroundTint="@android:color/holo_red_light"/>
+        android:backgroundTint="@android:color/holo_red_light"
+        android:src="@drawable/crear_perfil_mascota" />
 
 
 </LinearLayout>
