--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -3,27 +3,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menPerfil"
-        android:icon="@drawable/messenger_bubble_large_blue"
+        android:icon="@drawable/miperfil"
         android:title="@string/men_mi_perfil"/>
     <item
         android:id="@+id/menConfiguracion"
-        android:icon="@drawable/messenger_bubble_large_white"
+        android:icon="@drawable/miconfiguracion"
         android:title="@string/men_configuracion"/>
     <item
         android:id="@+id/menPrefDeBusqueda"
-        android:icon="@drawable/messenger_bubble_large_blue"
+        android:icon="@drawable/mibusqueda"
         android:title="@string/men_pref_busqueda"/>
     <item
         android:id="@+id/menServicios"
-        android:icon="@drawable/messenger_bubble_large_blue"
+        android:icon="@drawable/misservicios"
         android:title="@string/men_servicios"/>
     <item
         android:id="@+id/menHistorial"
-        android:icon="@drawable/messenger_bubble_large_blue"
+        android:icon="@drawable/michat"
         android:title="@string/men_historial"/>
     <item
         android:id="@+id/menSwipe"
-        android:icon="@drawable/messenger_bubble_large_blue"
+        android:icon="@drawable/miswipe"
         android:title="@string/men_swipe"/>
     <!-- <item
          android:id="@+id/menAmigos"
