--- a/app/src/main/res/layout/activity_drawer_prueba.xml
+++ b/app/src/main/res/layout/activity_drawer_prueba.xml
@@ -16,7 +16,7 @@ android:id="@+id/dlaContenedor">
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#3445EE">
+        android:background="#DC143C">
 
     </android.support.v7.widget.Toolbar>
     <FrameLayout
