--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal" >
@@ -8,7 +8,8 @@
         android:contentDescription="@string/profile_other"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_launcher"
+        android:layout_gravity="start"/>
     <TextView
         android:textSize="18sp"
         android:id="@+id/tvBody"
@@ -16,13 +17,17 @@
         android:lines="3"
         android:layout_marginRight="64dp"
         android:layout_width="match_parent"
-        android:layout_height="64dp">
+        android:layout_height="64dp"
+        android:layout_toRightOf="@+id/ivProfileLeft"
+        android:layout_toEndOf="@+id/ivProfileLeft">
     </TextView>
     <ImageView
         android:id="@+id/ivProfileRight"
         android:contentDescription="@string/profile_me"
-        android:layout_marginLeft="-64dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="end"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:src="@mipmap/ic_launcher" />
-</LinearLayout>
+        />
+</RelativeLayout>
