--- a/app/src/main/res/layout/chat_item_lista.xml
+++ b/app/src/main/res/layout/chat_item_lista.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:drawableRight="@drawable/arrow"
-    android:orientation="horizontal"
-    android:padding="10dp"
-    android:text="TextView"
-    android:textColor="@color/common_signin_btn_dark_text_disabled"
-    android:textSize="18sp"
-    android:drawableLeft="@drawable/ic_online"
-    android:drawablePadding="10dp"
-    />
+    android:layout_height="wrap_content">
+
+    <com.pkmmte.view.CircularImageView
+        android:id="@+id/circularImagePerfilMascotaChat"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center"
+        android:src="@drawable/prueba"
+        app:border="true"
+        app:border_color="#EEEEEE"
+        app:border_width="4dp"
+        app:shadow="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/TextViewChat"
+        android:drawablePadding="10dp"
+        android:drawableRight="@drawable/arrow"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:text="TextView"
+        android:textSize="18sp" />
+
+
+</LinearLayout>
